--- a/apps/autobutler.ai/assets/css/reset.css
+++ b/apps/autobutler.ai/assets/css/reset.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
@@ -15,4 +16,4 @@ html, body {
 #__nuxt {
   min-height: 100vh;
   min-width: 100vw;
-} 
+}
