ui-rewrite: Create home page properly
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/src/autobutler/backend/ui/views/home.templ
+++ b/src/autobutler/backend/ui/views/home.templ
@@ -4,14 +4,13 @@ import (
 "github.com/exokomodo/exoflow/autobutler/backend/ui/components"
 )
 
-templ Index() {
+templ Home() {
     <!DOCTYPE html>
     <html lang="en">
         @components.Header()
-        <body class="min-h-screen w-full">
-            <main>
-            </main>
-        </body>
+        @components.Body() {
+            @components.HeroSection()
+        }
         @components.Footer()
     </html>
 }
