--- a/src/autobutler/backend/ui/components/hero/icon.templ
+++ b/src/autobutler/backend/ui/components/hero/icon.templ
@@ -1,6 +1,6 @@
-package components
+package hero
 
-templ Hero() {
+templ icon() {
     <div class="relative">
         <img
             src="/public/butler.png"
