--- a/src/autobutler/backend/ui/components/hero/component.templ
+++ b/src/autobutler/backend/ui/components/hero/component.templ
@@ -1,11 +1,11 @@
-package components
+package hero
 
-templ HeroSection() {
+templ Hero() {
     <div class="min-h-screen flex flex-col items-center justify-center p-8">
         <div class="text-center max-w-3xl space-y-8">
-            @Hero()
-            @FeatureGrid()
-            @CtaButton()
+            @icon()
+            @featureGrid()
+            @ctaButton()
         </div>
     </div>
 }
