--- a/src/autobutler/ui/components/header.templ
+++ b/src/autobutler/ui/components/header.templ
@@ -6,6 +6,7 @@ templ Header() {
             src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js"
             crossorigin="anonymous"
         ></script>
+        <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
