--- a/ui/components/chat/input.templ
+++ b/ui/components/chat/input.templ
@@ -8,7 +8,7 @@ templ input() {
             id="messageInput"
             type="text"
             placeholder="Type your message..."
-            class="flex-1 bg-white/10 border border-white/20 rounded-lg px-4 py-2 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="flex-1 border bg-gray-400 dark:bg-white/10 border-gray/ dark:text-gray-100 dark:border-white/20 rounded-lg px-4 py-2 placeholder-gray-200 dark:placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-500"
           />
           <button
             id="messageSubmit"
