--- a/ui/components/chat/message/component.templ
+++ b/ui/components/chat/message/component.templ
@@ -30,13 +30,13 @@ func chatMessageClass(message llm.ChatMessage) string {
     class := "max-w-[80%] rounded-lg p-4 "
     switch message.Role {
         case llm.ChatRoleUser:
-            class += "bg-blue-600 text-white"
+            class += "bg-blue-600 text-gray-100 dark:text-white"
         case llm.ChatRoleSystem:
-            class += "bg-white/10 text-gray-100"
+            class += "bg-gray-400 dark:bg-white/10 dark:text-gray-100"
         case llm.ChatRoleDummy:
-            class += "bg-orange-500/20 text-gray-100 border-2 border-orange-500"
+            class += "bg-orange-500/20 dark:text-gray-100 border-2 border-orange-500"
         case llm.ChatRoleError:
-            class += "bg-red-500/20 text-gray-100 border-2 border-red-500"
+            class += "bg-red-500/20 dark:text-gray-100 border-2 border-red-500"
     }
     return class
 }
