--- a/ui/components/files/component.templ
+++ b/ui/components/files/component.templ
@@ -1,7 +1,7 @@
 package files
 
 templ Component(filenames []string, sizes []int64) {
-    <div class="max-w-2xl mx-auto mt-10 bg-white rounded shadow p-6">
+    <div class="bg-white dark:bg-gray-900 max-w-2xl mx-auto mt-10 rounded shadow p-6">
         <h2 class="text-2xl font-bold mb-4">File Explorer</h2>
         <ul class="divide-y divide-gray-200">
             for i, filename := range filenames {
