--- a/ui/components/hero/cta_button.templ
+++ b/ui/components/hero/cta_button.templ
@@ -2,7 +2,7 @@ package hero
 
 templ ctaButton() {
     <a
-        class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto w-fit"
+        class="text-white bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-lg transition-colors duration-200 flex items-center space-x-2 mx-auto w-fit"
         href="/chat"
       >
         <span>Start Chatting</span>
