151: Allow for uploading files (#199)
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/ui/components/file_explorer/component.templ
+++ b/ui/components/file_explorer/component.templ
@@ -6,8 +6,12 @@ import (
 )
 
 templ Component(rootDir string, files []fs.FileInfo) {
-    <div class="bg-white dark:bg-gray-900 max-w-2xl mx-auto mt-10 rounded shadow p-6">
-        <h2 class="text-2xl font-bold mb-4">File Explorer</h2>
+    <div id="file-explorer" class="bg-white dark:bg-gray-900 max-w-2xl mx-auto mt-10 rounded shadow p-6">
+        <div class="flex items-center mb-4">
+            <h2 class="text-2xl font-bold mr-4">File Explorer</h2>
+            @upload(rootDir)
+        </div>
+        <div id="file-explorer-status"></div>
         if len(files) == 0 {
             <span class="py-3 text-gray-500">No files found in { util.GetFilesDir() }</span>
         } else {
