--- a/ui/components/header/component.templ
+++ b/ui/components/header/component.templ
@@ -25,6 +25,22 @@ templ Component() {
                 padding: 0;
                 box-sizing: border-box;
             }
+
+            input[type=file]::file-selector-button {
+                margin-right: 20px;
+                border: none;
+                background: rgb(37, 99, 235);
+                padding: 10px 18px;
+                border-radius: 10px;
+                color: #fff;
+                cursor: pointer;
+                transition: background .2s ease-in-out;
+            }
+
+            input[type=file]::file-selector-button:hover {
+                background: rgb(29, 78, 216);
+            }
+
         </style>
     </head>
 }
