Fix max width on file explorer
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/ui/components/file_explorer/component.templ
+++ b/ui/components/file_explorer/component.templ
@@ -8,7 +8,7 @@ import (
 templ Component(rootDir string, files []fs.FileInfo) {
     <div id="file-explorer" class="bg-white dark:bg-gray-900 max-w-2xl mx-auto mt-10 rounded shadow p-6">
         <div class="flex items-center mb-4">
-            <h2 class="text-2xl font-bold mr-4">File Explorer</h2>
+            <h2 class="text-2xl font-bold mr-4 whitespace-nowrap">File Explorer</h2>
             @upload(rootDir)
         </div>
         <div id="file-explorer-status"></div>
