--- a/ui/components/body/component.templ
+++ b/ui/components/body/component.templ
@@ -6,9 +6,9 @@ import (
 
 templ Component() {
     <body class="min-h-screen bg-gradient-to-br from-gray-300 from-gray-400 dark:from-gray-900 dark:to-gray-800">
-        <main class="relative min-h-screen text-black dark:text-white">
+        <main class="min-h-screen text-black dark:text-white">
             @gradient_overlays.Component()
-            <div class="relative z-10">
+            <div>
                 { children... }
             </div>
         </main>
