--- a/ui/components/file_explorer/load/component.templ
+++ b/ui/components/file_explorer/load/component.templ
@@ -6,7 +6,7 @@ import (
 
 templ Component(rootDir string) {
     <div hx-trigger="load"
-         hx-get={filepath.Join("/api/v1/files/explorer", rootDir)}
+         hx-get={filepath.Join("/components/files/explorer", rootDir)}
          hx-target="#file-explorer"
          hx-swap="outerHTML"
          hx-headers='{"Accept": "text/html"}'></div>
