151: Rename file info to file details
Signed-off-by: James Orson <jamesaorson@gmail.com>

--- a/internal/server/ui/components/file_explorer/scripts.templ
+++ b/internal/server/ui/components/file_explorer/scripts.templ
@@ -6,7 +6,7 @@ templ scripts() {
         x: null,
         y: null,
     }
-    function showFileInfo(event, fileName) {
+    function showFileDetails(event, fileName) {
         alert(fileName);
     }
 
