--- a/internal/server/ui/components/file_explorer/context_menu.templ
+++ b/internal/server/ui/components/file_explorer/context_menu.templ
@@ -23,9 +23,9 @@ templ contextMenu(rootDir string, file fs.FileInfo) {
                 <button
                     type="button"
                     class="w-full text-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-700 text-sm"
-                    hx-on:click={templ.JSFuncCall("showFileInfo", templ.JSExpression("event"), file.Name())}
+                    hx-on:click={templ.JSFuncCall("showFileDetails", templ.JSExpression("event"), file.Name())}
                 >
-                    File Info
+                    File Details
                 </button>
             </li>
             <li>
