--- a/internal/server/ui/components/icons/folder/component.templ
+++ b/internal/server/ui/components/icons/folder/component.templ
@@ -1,7 +1,7 @@
 package folder
 
 templ Component() {
-    <svg class="w-5 h-5 text-grey-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-        <path d="M3 7a2 2 0 012-2h3.172a2 2 0 011.414.586l1.828 1.828A2 2 0 0012.828 8H19a2 2 0 012 2v7a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"/>
-    </svg>
+	<svg class="w-5 h-5 text-grey-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+		<path d="M3 7a2 2 0 012-2h3.172a2 2 0 011.414.586l1.828 1.828A2 2 0 0012.828 8H19a2 2 0 012 2v7a2 2 0 01-2 2H5a2 2 0 01-2-2V7z"></path>
+	</svg>
 }
