--- a/internal/server/ui/components/icons/generic/component.templ
+++ b/internal/server/ui/components/icons/generic/component.templ
@@ -1,8 +1,8 @@
 package generic
 
 templ Component() {
-    <svg class="w-5 h-5 text-grey-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-        <rect x="4" y="2" width="16" height="20" rx="2" fill="none" stroke="currentColor" stroke-width="2"/>
-        <path d="M8 6h8M8 10h8M8 14h4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
+	<svg class="w-5 h-5 text-grey-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+		<rect x="4" y="2" width="16" height="20" rx="2" fill="none" stroke="currentColor" stroke-width="2"></rect>
+		<path d="M8 6h8M8 10h8M8 14h4" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+	</svg>
 }
