--- a/internal/server/ui/components/header/component.templ
+++ b/internal/server/ui/components/header/component.templ
@@ -1,18 +1,15 @@
 package header
 
 templ Component() {
-    <head>
-        <script
-            src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js"
-            crossorigin="anonymous"
-        ></script>
-        <script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
-        <script src="https://cdn.tailwindcss.com"></script>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Autobutler - Your home assistant</title>
-        <link rel="icon" type="image/x-icon" href="/public/favicons/48x48.ico">
-        <style>
+	<head>
+		<script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js" crossorigin="anonymous"></script>
+		<script src="https://unpkg.com/htmx.org@1.9.12/dist/ext/json-enc.js"></script>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<meta charset="UTF-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>Autobutler - Your home assistant</title>
+		<link rel="icon" type="image/x-icon" href="/public/favicons/48x48.ico"/>
+		<style>
             html, body {
                 margin: 0;
                 padding: 0;
@@ -31,5 +28,5 @@ templ Component() {
                 display: none;
             }
         </style>
-    </head>
+	</head>
 }
