--- a/internal/server/ui/components/icons/image/component.templ
+++ b/internal/server/ui/components/icons/image/component.templ
@@ -1,9 +1,9 @@
 package image
 
 templ Component() {
-    <svg class="w-5 h-5 text-purple-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-        <rect x="3" y="5" width="18" height="14" rx="2" fill="none" stroke="currentColor" stroke-width="2"/>
-        <circle cx="8.5" cy="10.5" r="1.5" fill="currentColor"/>
-        <path d="M21 19l-5.5-5.5a2 2 0 0 0-2.8 0L3 19" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-    </svg>
+	<svg class="w-5 h-5 text-purple-500 mr-3" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+		<rect x="3" y="5" width="18" height="14" rx="2" fill="none" stroke="currentColor" stroke-width="2"></rect>
+		<circle cx="8.5" cy="10.5" r="1.5" fill="currentColor"></circle>
+		<path d="M21 19l-5.5-5.5a2 2 0 0 0-2.8 0L3 19" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
+	</svg>
 }
